Revert "HS-1013: Use Hibernate tenancy feature in inventory"
This reverts commit c23cdee86dc9ba82b1159edb61ed2d280c614fda.